--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,23 @@
 <html>
 <head>
   <title>Glimmr</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all'%>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
-<body>
-
-<%= yield %>
-
-</body>
+  <body>
+    <div id="holder">
+      <% if signed_in? %>
+        <%= current_user.username %>
+        <%= button_to "Sign Out", session_url, :method => :delete %>
+      <% end %>
+      <%= render "layouts/errors" %>
+      <div id="app-content">
+        <%= yield %>
+      </div>
+      <%= render "layouts/footer" %>
+    </div>
+  </body>
 </html>
