--- a/app/views/static_pages/_splash_nav.html.erb
+++ b/app/views/static_pages/_splash_nav.html.erb
@@ -3,7 +3,10 @@
     <!-- <div class="logo">logo</div> -->
     <div class="logo">
         <div class="box">G</div>
-        <div class="text"><span class="first"><a href="/">Glimmr</a></span></div>
+        <div class="text"><span class="first">
+          <%= link_to "Glimmr", root_url %>
+
+        </span></div>
     </div>
     <nav class='navigation'>
       <ul>
