--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,26 @@
   <%= csrf_meta_tags %>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+  <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+
+  <script>
+    <% if signed_in? %>
+      window.currentUserId = <%= current_user.id %>;
+    <% else %>
+      window.currentUserId = null;
+    <% end %>
+  </script>
+
+  <script type="text/javascript">
+    window.CLOUDINARY = {
+
+      cloud_name: "<%=ENV['CLOUD_NAME']%>",
+      upload_preset: "<%=ENV['UPLOAD_PRESET']%>"
+
+    };
+  </script>
+
 </head>
   <body>
     <div id="holder">
