--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -23,7 +23,8 @@ ul, li, h1, h2, h3, h4, h5, h6, p, a, .logo {
 #splashnav {
   position: fixed;
   width: 100%;
-  padding-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   top: 0;
   background: #000;
   transition: 0.7s all;
