--- a/app/assets/stylesheets/photo.scss
+++ b/app/assets/stylesheets/photo.scss
@@ -1,8 +1,8 @@
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
-.feed-grid {
-  padding: 50px;
+.picture-grid {
+  padding-top: 100px;
   font-size: 0;
   display: -ms-flexbox;
   -ms-flex-wrap: wrap;
