create photo show page

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -139,6 +139,11 @@ input:focus, textarea:focus {
   background-color:white;
 }
 
+.cloudinary:hover .ease{
+  width:100%;
+  background-color:white;
+}
+
 @media only screen and (max-width: 580px) {
   #form-div{
     left: 3%;
