create profile show page

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -5,7 +5,8 @@ $lightblue: #008AAD;
     position: absolute;
     left: 0;
     bottom: 0;
-    height: 109px;
+    padding: 1rem;
+    height: 100px;
     min-width: 1060px;
     width: 100%;
     font-size: 16px;
@@ -13,7 +14,7 @@ $lightblue: #008AAD;
 }
 
 .foot ul {
-    padding: 20px;
+    padding: 10px;
     margin: 1em 0;
 }
 
