--- a/app/views/static_pages/_splash_nav.html.erb
+++ b/app/views/static_pages/_splash_nav.html.erb
@@ -4,8 +4,7 @@
     <div class="logo">
         <div class="box">G</div>
         <div class="text"><span class="first">
-          <%= link_to "Glimmr", root_url %>
-
+          Glimmr
         </span></div>
     </div>
     <nav class='navigation'>
