--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -144,6 +144,18 @@ input:focus, textarea:focus {
   background-color:white;
 }
 
+.upload-preview {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.preview-img {
+  height: 100%;
+}
+
 @media only screen and (max-width: 580px) {
   #form-div{
     left: 3%;
