--- a/app/assets/stylesheets/logo.scss
+++ b/app/assets/stylesheets/logo.scss
@@ -1,4 +1,4 @@
-
+@import url(https://fonts.googleapis.com/css?family=Libre+Baskerville);
 
 * {
   box-sizing: border-box;
@@ -17,18 +17,20 @@ body {
   margin-left: 50px;
 }
 
+
+
 .box {
   width: 60px;
   height: 60px;
   border: 1px solid rgba(0,0,0,.5);
-  border-radius: 10px;
+  border-radius: 1000px;
   background: #0074D9;
   color: #fff;
-  font-size: 26px;
-  font-weight: 700;
+  font-size: 35px;
+  font-family: 'Libre Baskerville', serif;
+  font-weight: 100;
   line-height: 60px;
   text-align: center;
-  font-style: italic;
   position: absolute;
   left: 0%;
   z-index: 2;
@@ -54,6 +56,7 @@ body {
   font-size: 30px;
   font-weight: 100;
   animation: fade 2.5s;
+  font-family: 'Libre Baskerville', serif;
 }
 
 .first a {
