finish user photo index page

--- a/app/assets/stylesheets/navprofile.scss
+++ b/app/assets/stylesheets/navprofile.scss
@@ -37,7 +37,7 @@
   list-style:none;
   width:160px;
   text-align:center;
-  font-family:Helvetica, sans-serif;
+  font-family: "Lato","Verdana",sans-serif;
   border: 1px dashed rgba(255,255,255, 0);
   color:#fff;
   padding:10px 0 10px 0;
@@ -50,6 +50,8 @@
   /*border:1px dashed #fff;*/
   background:rgba(255,255,255,.1);
 }
+
+
 .profile-navigation ul{
   border: 1px solid #fff;
   position:relative;
