--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -7,7 +7,6 @@
 
 }
 
-
 .user-pic {
 
   border-radius: 50%;
@@ -16,9 +15,7 @@
   z-index: 20;
   position: relative;
   background-position: center;
-
-
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2), 1px 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2), 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -26,14 +23,45 @@
   padding-top: 55px;
   padding-left: 90px;
   color: white;
+  letter-spacing: .02em;
+  text-shadow:
+    2px 2px 1px #2c2c2c,
+    1px 1px 2px rgba(0, 0, 0, 0.2);
+
 }
 
 .profile-username {
-    letter-spacing: .05em;
-    text-shadow:
-      4px 4px 0px #2c2c2c,
-      7px 7px 0px rgba(0, 0, 0, 0.2);
+  letter-spacing: .05em;
+  text-shadow:
+    4px 4px 3px #2c2c2c,
+    7px 7px 4px rgba(0, 0, 0, 0.2);
 
+}
+
+.profile-summary-container {
+  height: 100%;
+  min-height: 500px;
+  width: 100%;
+  background: gray;
+  display:flex;
+  justify-content: flex;
+  padding-top: 15px;
+  padding-bottom: 30px;
+}
+
+.profile-summary {
+  position: relative;
+  left:5%;
+  width: 90%;
+  min-width: 1000px;
+  box-sizing: border-box;
+  vertical-align: top;
+  border-radius: 5px;
+  background: white;
+  padding-top:50px;
+  padding-bottom:50px;
+  padding-left:70px;
+  padding-right:70px;
 }
 
 .you-text {
