--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
 html,body {
   height: 100%
 }
@@ -12,9 +13,103 @@ html,body {
 
 }
 
+#app-content {
+  min-height: 100%;
+  position:relative;
+
+}
+
+#content-landing {
+  overflow:hidden;
+}
+
 #body {
   padding-bottom: 100px;
 }
 
+.app-container {
+  height: 100%;
+  width: 100%;
+}
 
+.main-grid {
+  padding-top: 100px;
+  padding-bottom: 90px;
+  height: 100%;
+  width: 100%;
+}
+
+.splash-grid {
+  padding-top: 80px;
+  padding-bottom: 90px;
+  height: 100%;
+  width: 100%;
+
+}
+
+section .inner {
+  padding-top: 90px;
+}
+
+.splash-bucket {
+  position: relative;
+  min-height: 700px;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-sizing: border-box;
+  vertical-align: top;
+  clear:none;
+}
+
+.splash-bucket h1 {
+  font-weight: 600;
+  font-size: 42px;
+  padding-bottom: 18px;
+  color: white;
+  text-shadow: 0 0 50px rgba(0,0,0,0.4);
+  margin: 0;
+}
+
+
+
+.centered {
+  position: relative;
+  top: 50%;
+  max-width: 100%;
+  max-width: 600px;
+  transform: translateY(-65%);
+  margin: 0 auto;
+  text-align: center;
+
+}
+
+
+.action-butt {
+  -webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  display: block;
+  margin: 20px auto;
+  max-width: 190px;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 16px;
+  padding: 20px 30px;
+  color: white;
+  box-shadow: white 0 0px 0px 2px inset;
+
+  &:focus, &:visited {
+    color: white;
+    text-decoration: none;
+  };
+}
+
+.action-butt:hover {
+  color: rgba(255, 255, 255, 0.85);
+  box-shadow: rgba(0, 116, 217, 0.3) 0 0px 0px 40px inset;
+  text-decoration: none;
+}
 
