--- a/app/views/static_pages/_splash_nav.html.erb
+++ b/app/views/static_pages/_splash_nav.html.erb
@@ -9,8 +9,8 @@
     </div>
     <nav class='navigation'>
       <ul>
-        <li><a href="/">Welcome</a></li>
-        <li><a href="/">Inspiration</a></li>
+        <li><a class="welcome-link" href="#">Welcome</a></li>
+        <li><a href="#" class="inspire-link">Inspiration</a></li>
         <li><a href="/users/new">Demo</a></li>
         <li><a href="/session/new">Sign In</a></li>
         <li><a id="start" href="/users/new">Get Started</a></li>
