--- a/app/views/static_pages/_splash_body.html.erb
+++ b/app/views/static_pages/_splash_body.html.erb
@@ -11,7 +11,7 @@
       <a href="#" class="action-butt inspire-butt">Inspire me</a>
     </div>
   </div>
-  <div class="splash-bucket" style="height: 850px; background-image: url(http://i.imgur.com/z8Bu8FZ.gif);">
+  <div class="splash-bucket" style="height: 850px; background-image: url(http://res.cloudinary.com/dcqvnxgiy/image/upload/v1456645652/z8Bu8FZ_rcqmco.gif);">
     <div class="centered">
       <h1>Share with the world.</h1>
     </div>
