--- a/app/assets/stylesheets/logo.scss
+++ b/app/assets/stylesheets/logo.scss
@@ -15,6 +15,12 @@ body {
   top: 20px; bottom: 0; left: 0; right: 0;
   margin: auto;
   margin-left: 50px;
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 
