--- a/app/assets/stylesheets/photo_show.scss
+++ b/app/assets/stylesheets/photo_show.scss
@@ -1,7 +1,4 @@
 
-
-
-
 .photo-info {
   width: 100%;
   height: 780px;
@@ -27,22 +24,6 @@
 }*/
 
 .photo-splash {
-/*
-
-
-  justify-content: space-between;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  user-drag: none;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-drag: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  -webkit-transition: background-image 0.5s ease-in-out;
-  transition: background-image 0.5s ease-in-out;
-  background-size: cover;
-  background-position: 50%;*/
    user-select: none;
   -moz-user-select: none;
   -webkit-user-drag: none;
@@ -64,8 +45,6 @@
   -webkit-transition: background-image 0.5s ease-in-out;
   transition: background-image 0.5s ease-in-out;
   overflow: hidden;
-
-
 }
 
 
@@ -94,9 +73,84 @@
   -ms-user-select: none;
 }
 
-
-
-
 .prev-next:hover {
   opacity: 1;
+}
+
+.delete-container {
+
+  width: 200px;
+  height: 100%;
+  /*top: 0;*/
+}
+
+.next {
+  position: absolute;
+  top: 27.5%;
+}
+
+.delete-button {
+  position: absolute;
+  bottom: 2%;
+  right: 2%;
+
+  height: 60px;
+  opacity: 0.5;
+  z-index: 10;
+  cursor: pointer;
+  transition: opacity .5s;
+  border-radius: 5px;
+  color: #FFF;
+  font-size: 156pt;
+  text-align: center;
+  line-height: 380px;
+  font-family: "Varela Round", sans-serif;
+  background-color: rgba(255, 255, 255, 0);
+   text-shadow:
+    2px 2px 1px #2c2c2c,
+    3px 3px 2px rgba(0, 0, 0, 0.4);
+
+   user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.like-button {
+  position: absolute;
+  bottom: 2%;
+  right: 6%;
+  width: 50px;
+  height: 60px;
+  opacity: 0.5;
+  z-index: 10;
+  cursor: pointer;
+  transition: opacity .5s;
+  border-radius: 5px;
+  text-shadow:
+    2px 2px 1px #2c2c2c,
+    3px 3px 2px rgba(0, 0, 0, 0.4);
+  font-size: 156pt;
+  text-align: center;
+  line-height: 380px;
+  font-family: "Varela Round", sans-serif;
+  background-color: rgba(255, 255, 255, 0);
+   user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.like-button:hover{
+ opacity: 1;
+}
+
+.delete-button:hover{
+ opacity: 1;
 }
