add css styling

--- a/app/assets/stylesheets/photo_show.scss
+++ b/app/assets/stylesheets/photo_show.scss
@@ -75,6 +75,7 @@
 
 .prev-next:hover {
   opacity: 1;
+  cursor: pointer;
 }
 
 .delete-container {
@@ -149,8 +150,10 @@
 
 .like-button:hover{
  opacity: 1;
+ cursor: pointer;
 }
 
 .delete-button:hover{
  opacity: 1;
+ cursor: pointer;
 }
