--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -74,6 +74,7 @@ nav {
   background: $lightblue;
   text-decoration: none;
   color: #fff;
+  cursor: pointer;
 }
 
 
@@ -82,6 +83,7 @@ nav {
   background: green;
   text-decoration: none;
   color: #fff;
+  cursor: pointer;
 }
 
 .logo {
