--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -119,5 +119,6 @@ section .inner {
   color: rgba(255, 255, 255, 0.85);
   box-shadow: rgba(0, 116, 217, 0.3) 0 0px 0px 40px inset;
   text-decoration: none;
+  cursor: pointer;
 }
 
