--- a/app/assets/stylesheets/navprofile.scss
+++ b/app/assets/stylesheets/navprofile.scss
@@ -35,7 +35,7 @@
   ul {
     li {
       &:hover {
-          background:rgba(255,255,255,.1);
+          background:rgba(255,255,255,.3);
       }
 
       display:inline-block;
@@ -46,7 +46,7 @@
       border: 1px dashed rgba(255,255,255, 0);
       color:#fff;
       padding:10px 0 10px 0;
-      margin:-1px -5px -1px -1px;
+      margin:-1px -3px -1px -1px;
       cursor:pointer;
       transition:all .5s;
       -webkit-transition:all .3s;
@@ -59,7 +59,7 @@
 }
 
 .profile-navigation ul{
-  border: 1px solid #fff;
+  /*border: 1px solid #fff;*/
   position:relative;
   top: 5px;
   width:100%;
