--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,3 +1,5 @@
+@import "compass/css3";
+
 .user-cover {
 
   height: 350px;
@@ -154,12 +156,15 @@
   padding-right: 3%;
   padding-top: 2%;
   padding-bottom: 2%;
+  background-color: #EFEFEF;
 }
 
 .followee-container {
   display: flex;
   justify-content:center;
   align-content:center;
+  padding-left: 40px;
+  padding-right: 40px;
   /*min-width: 850px;*/
 }
 
@@ -172,8 +177,8 @@
   position: relative;
   background-position: center;
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.6), 2px 2px 3px rgba(0, 0, 0, 0.4);
-  bottom: 10px;
-  left: 30px;
+
+
 }
 
 .followee-pic:hover {
@@ -190,6 +195,7 @@
   letter-spacing: .05em;
   text-shadow:
     3px 3px 2px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
 }
 
 
