--- a/app/assets/stylesheets/photo_show.scss
+++ b/app/assets/stylesheets/photo_show.scss
@@ -1,9 +1,78 @@
 
 .photo-info {
-  width: 100%;
-  height: 780px;
-  background: white;
 
+  width: 100%;
+  height: 100%;
+
+  min-height: 500px;
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 30px;
+}
+
+.uploader-container {
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: flex-start;
+    padding-left: 375px;
+    padding-right: 375px;
+     min-width: 850px;
+  }
+
+.uploader-pic {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  z-index: 20;
+
+  background-position: center;
+  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.6), 2px 2px 3px rgba(0, 0, 0, 0.4);
+
+
+}
+
+.uploader-username {
+  letter-spacing: .05em;
+  padding-top: 20px;
+  padding-bottom: 8px;
+  text-shadow:
+    2px 2px 1px rgba(0, 0, 0, 0.2);
+  font-size: 20px;
+  font-family: 'Proxima Nova', 'helvetica neue', helvetica, arial, sans-serif;
+  font-weight: 600;
+
+}
+
+.uploader-title {
+  letter-spacing: .05em;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  text-shadow:
+    2px 2px 1px rgba(0, 0, 0, 0.2);
+  font-size: 20px;
+
+}
+
+.uploader-description {
+  letter-spacing: .05em;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  text-shadow:
+    2px 2px 1px rgba(0, 0, 0, 0.2);
+  font-size: 16px;
+
+}
+
+.uploader-pic:hover {
+  cursor: pointer;
+  opacity: .6;
+  -webkit-transition: all 0.5s ease-in-out;
+     -moz-transition: all 0.5s ease-in-out;
+       -o-transition: all 0.5s ease-in-out;
+      -ms-transition: all 0.5s ease-in-out;
+          transition: all 0.5s ease-in-out;
 }
 
 /*.photo-splash {
@@ -156,4 +225,14 @@
 .delete-button:hover{
  opacity: 1;
  cursor: pointer;
+}
+
+#splitter {
+  width: 100%;
+  background: #101010;
+  height: 40px;
+  background: #212124;
+
+
+
 }
