--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,5 +1,3 @@
-@import "compass/css3";
-
 .user-cover {
 
   height: 350px;
@@ -157,6 +155,8 @@
   padding-top: 2%;
   padding-bottom: 2%;
   background-color: #EFEFEF;
+  min-height: 500px;
+
 }
 
 .followee-container {
@@ -165,32 +165,37 @@
   align-content:center;
   padding-left: 40px;
   padding-right: 40px;
+
   /*min-width: 850px;*/
 }
 
 
 .followee-pic {
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 140px;
+  height: 140px;
   z-index: 20;
   position: relative;
   background-position: center;
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.6), 2px 2px 3px rgba(0, 0, 0, 0.4);
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  letter-spacing: .02em;
 
 }
 
-.followee-pic:hover {
+/*.followee-pic:hover {
   cursor: pointer;
-  opacity: .7;
-  -webkit-transition: all .4s ease;
-     -moz-transition: all .4s ease;
-       -o-transition: all .4s ease;
-      -ms-transition: all .4s ease;
-          transition: all .4s ease;
+  opacity: .6;
+  -webkit-transition: all 0.5s ease-in-out;
+     -moz-transition: all 0.5s ease-in-out;
+       -o-transition: all 0.5s ease-in-out;
+      -ms-transition: all 0.5s ease-in-out;
+          transition: all 0.5s ease-in-out;
 }
-
+*/
 .followee-username {
   letter-spacing: .05em;
   text-shadow:
@@ -198,6 +203,56 @@
   max-width: 400px;
 }
 
+.followee-pic:hover {
+  -moz-transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  -webkit-transform: scale(1, 1);
+  transform: scale(1, 1);
+  background-position: top top;
+  -webkit-filter: grayscale(0.6) blur(2px);
+  filter: grayscale(0.4) blur(2px);
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.8s;
+  -o-transition-duration: 0.8s;
+  -webkit-transition-duration: 0.8s;
+  transition-duration: 0.8s;
 
+}
+.followee-pic:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  opacity: 0.5;
+}
+
+.followee-text {
+  visibility: hidden;
+  text-align: center;
+  font-color: white;
+  font-size: 15px;
+  text-shadow:
+  3px 3px 2px rgba(0, 0, 0, 0.2);
+  -moz-transform: none;
+  -webkit-transform: none;
+  -o-transform: none;
+  -ms-transform: none;
+  transform: none;
+  -webkit-filter: grayscale(0.0) blur(0px);
+  filter: grayscale(0.0) blur(0px);
+
+}
+
+.followee-pic:hover .followee-text {
+  visibility: visible;
+  -moz-transform: none;
+  -webkit-transform: none;
+  -o-transform: none;
+  -ms-transform: none;
+  transform: none;
+  -webkit-filter: grayscale(0.0) blur(0px);
+  filter: grayscale(0.0) blur(0px);
+
+}
 
 
