create follow button

--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -1,4 +1,4 @@
-$red: #E1332D;
+/*$red: #E1332D;
 $white: #fff;
 
 .buttons {
@@ -97,4 +97,4 @@ $white: #fff;
   text-decoration: none;
   text-shadow: -1px -1px 0 darken($red, 9.5%);
   transition: all 250ms linear;
-}
+}*/
