--- a/app/assets/stylesheets/photo.scss
+++ b/app/assets/stylesheets/photo.scss
@@ -166,7 +166,7 @@
 }
 
 .heart-red{
-  color: red;
+  color: #FB3052;
     text-shadow:
     2px 1px 1px #2c2c2c,
     3px 2px 2px rgba(0, 0, 0, 0.4);
