--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,7 +18,7 @@
 
 
       <div class="submit">
-        <input type="submit" value="get started" id="button-blue"/>
+        <input type="submit" value="create account" id="button-blue"/>
         <div class="ease"></div>
       </div>
     </form>
