--- a/app/assets/stylesheets/photo_show.scss
+++ b/app/assets/stylesheets/photo_show.scss
@@ -77,6 +77,8 @@
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+   position: absolute;
+  top: 27.5%;
 }
 
 .prev-next:hover {
@@ -154,12 +156,47 @@
   transition: all .4s ease-in-out;
 }
 
+.back-button {
+  position: absolute;
+  top: 2%;
+  left: 2%;
+  width: 50px;
+  height: 60px;
+  opacity: 0.3;
+  z-index: 10;
+  cursor: pointer;
+  transition: opacity .5s;
+  border-radius: 5px;
+  text-shadow:
+    2px 2px 1px #2c2c2c,
+    3px 3px 2px rgba(0, 0, 0, 0.4);
+  font-size: 156pt;
+  text-align: center;
+  line-height: 380px;
+  font-family: "Varela Round", sans-serif;
+  background-color: rgba(255, 255, 255, 0);
+   user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+  color: white;
+}
+
 .like-button:hover{
  opacity: 1;
  cursor: pointer;
 }
 
 .delete-button:hover{
+ opacity: 1;
+ cursor: pointer;
+}
+
+.back-button:hover{
  opacity: 1;
  cursor: pointer;
 }
