css styling part 2

--- a/app/assets/stylesheets/photo.scss
+++ b/app/assets/stylesheets/photo.scss
@@ -123,6 +123,16 @@
       transition: all 0.5s ease;
 }
 
+.nd-content_1 {
+  position: absolute;
+  width: 91%;
+  height: 100%;
+
+  top: 0;
+  -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease;
+}
+
 .nd-content_inner {
   display: table;
   width: 100%;
