--- a/app/assets/stylesheets/navprofile.scss
+++ b/app/assets/stylesheets/navprofile.scss
@@ -9,6 +9,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 
 }
 
