--- a/app/assets/stylesheets/photo_show.scss
+++ b/app/assets/stylesheets/photo_show.scss
@@ -3,10 +3,11 @@
 
   width: 100%;
   height: 100%;
+  background: #19191B;
 
   min-height: 500px;
   display: flex;
-  padding-top: 50px;
+  padding-top: 30px;
   padding-bottom: 30px;
 }
 
