--- a/app/views/static_pages/_splash_nav.html.erb
+++ b/app/views/static_pages/_splash_nav.html.erb
@@ -11,10 +11,11 @@
       <ul>
         <li><a class="welcome-link" href="#">Welcome</a></li>
         <li><a href="#" class="inspire-link">Inspiration</a></li>
-        <li><a href="/session/new">Demo</a></li>
+        <li><a href="/session/new" class="demo-butt">Demo</a></li>
         <li><a href="/session/new">Sign In</a></li>
         <li><a id="start" href="/users/new">Get Started</a></li>
       </ul>
     </nav>
   </div>
 </header>
+
