--- a/app/views/static_pages/_logo.html.erb
+++ b/app/views/static_pages/_logo.html.erb
@@ -1,4 +1,4 @@
-<div class="splash-navbar">
+<!-- <div class="splash-navbar">
   <nav>
     <a href="/">
       <div class="pulse">
@@ -15,4 +15,4 @@
       </li>
     </ul>
   </nav>
-</div>
+</div> -->
